# Physics-Simulation

./: CMakeLists.txt  Physics_SimulationSFML.sln  Physics_SimulationSFML.vcxproj  Physics_SimulationSFML.vcxproj.filters  README.md  задания.txt
Physics_.7db52cf4/x64/Debug/: Physics_SimulationSFML.exe.recipe  Physics_SimulationSFML.ilk  vc143.idb
Physics_.7db52cf4/x64/Debug/Physics_.7db52cf4.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Cl.items.tlog  Physics_SimulationSFML.lastbuildstate  link.command.1.tlog  link.read.1.tlog  link.secondary.1.tlog  link.write.1.tlog
headers/: Chain.h  Circle.h  Object.h  PhysicsEngine.h  Rectangle.h  calculate_Force.h  calculate_collisions.h  math.h  matrix.h  vec.h
src/: Chain.cpp  Circle.cpp  Circle.h  PhysicsEngine.cpp  PhysicsEngine.h  Rectangle.cpp  calculate_Force.cpp  calculate_collisions.cpp  main.cpp  math.cpp  matrix.cpp  vec.cpp  vec.h
tests/: test.cpp
